src/components/BreadCrumb/index.sass
@import '../../styles/variables.sass'

.breadcrumb
  padding: 0 30px
  &__content
    display: flex
    align-items: center
    border-bottom: 1px solid $slightYellow
    padding-bottom: 10px

  span
    padding: 5px 2px 0 2px

  &__text
    display: flex
    align-items: center
    a, p
      font-size: 16px !important
      font-family: ProximaNovaRegular
      white-space: nowrap

@media only screen and (min-width: 1023px)
  .breadcrumb
    padding: 0 50px

@media only screen and (min-width: 1300px)
  .breadcrumb
    padding: 0 100px

    &__content
      padding-top: 40px

